docs/book/samples/appc/tabs_check.out
error[formatting]: tabs are not part of the canonical grammar; indent with spaces
  --> tabs_check.kso:2:1
   2 | 	print "hi"
       ^
